[gd_scene load_steps=3 format=3 uid="uid://cxwt44nrspiye"]

[ext_resource type="Script" path="res://scripts/final_boss_quiz.gd" id="1_l1esq"]
[ext_resource type="PackedScene" uid="uid://dutqe76oy7gik" path="res://scenes/boss_level_components/boss_level_window.tscn" id="2_1bi2s"]

[node name="boss" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l1esq")

[node name="boss_level_window" parent="." instance=ExtResource("2_1bi2s")]

[node name="words" type="HSplitContainer" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 192.0
offset_right = 1136.0
offset_bottom = 637.0

[node name="panel" type="Panel" parent="words"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="output" type="RichTextLabel" parent="words/panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 438.0
offset_bottom = 434.0

[node name="wordbank" type="ItemList" parent="words"]
custom_minimum_size = Vector2(0, 225)
layout_mode = 2
size_flags_vertical = 0

[node name="results" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 422.0
offset_right = 1136.0
offset_bottom = 627.0

[node name="result" type="Label" parent="results"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 11.0
offset_right = 650.0
offset_bottom = 111.0

[node name="clear" type="Button" parent="buttons"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="submit" type="Button" parent="buttons"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="problems" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 126.0
offset_right = 1152.0
offset_bottom = 190.0

[node name="problem" type="Label" parent="problems"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[connection signal="item_activated" from="words/wordbank" to="." method="_on_wordbank_item_activated"]
[connection signal="pressed" from="buttons/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="buttons/submit" to="." method="_on_submit_pressed"]
